Add JDBC software impersonation example (#68)